Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6969

Profile doesn't include the reason that a query couldn't be dequeued from admission controller

    XMLWordPrintableJSON

Details

    Description

      I noticed this while playing around on a local minicluster with AC enabled.

      The admission controller adds the reason for initial queuing to the profile, but does not expose why the query couldn't execute when it got to the head of the line. E.g. if it was initially queued because the queue was non-empty but then couldn't execute once it got to the head of the line because of memory.

          Request Pool: root.queueA
          Admission result: Admitted (queued)
          Admission queue details: waited 1130 ms, reason: queue is not empty (size 4); queued queries are executed first
      

      We should still include the initial reason for queuing, but also include the most reason for queuing once it got to the head of the line. It's probably most useful to keep the profile updated with the latest reason at all times (since the details can change while the query is at the head of the line).

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: